--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <script src="script.js"></script>
   <title>3G - O Seu Site de Informações</title>
 </head>
 <body>
   <header> 
+    <div id="menu">
+      <span class="material-symbols-outlined">
+        menu
+      </span>
+      <ul>
+          <li><a href="index.html">Página Principal</a></li>
+          <li><a href="gallery/gallery.html">Galeria</a></li>
+          <li><a href="about/about.html">Sobre</a></li>
+        </ul>
+      </div>
+    </div>
     <h1 id="logo">g3</h1>
   </header>
   <div class="mainpage">
