--- a/about/about.html
+++ b/about/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles/about-styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>3G - Sobre</title>
 </head>
 <body>
-     <header> 
+    <header> 
         <div id="menu">
             <span id="menu-bt" class="material-symbols-outlined">
             menu
@@ -26,4 +26,4 @@
     
     <footer>
         <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
-    </footer>
+    </footer>  
