--- a/about/about.html
+++ b/about/about.html
@@ -25,6 +25,7 @@
             <h1 id="logo">g3</h1>
     </header>
     
-    <footer>
+    <div id="footer">
         <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
-    </footer>  
+    </div>
+</body>
