--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -37,8 +37,8 @@
     </div>
         
         </div><br/>
-    <footer>
-        <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
-</footer>
+        <div id="footer">
+            <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
+    </div>
 </body>
 </html>
