--- a/index.html
+++ b/index.html
@@ -10,25 +10,23 @@
   <title>3G - O Seu Site de Informações</title>
 </head>
 <body>
+  <!--Cabecalho-->
   <header> 
-        
-  </div>
-  
-  <div id="menu">
-      <span id="menu-bt" class="material-symbols-outlined">
-      menu
-      </span>
-      <menu>
-              <ul>
-                  <li><a href="./index.html">Página Principal</a></li>
-                  <li><a href="./gallery/gallery.html">Galeria</a></li>
-                  <li><a href="./about/about.html">Sobre</a></li>
-          </ul>
-      </menu>
-      <h1 id="logo">g3</h1>
+    <div id="menu">
+        <span id="menu-bt" class="material-symbols-outlined">
+        menu
+        </span>
+        <menu>
+                <ul>
+                    <li><a href="./index.html">Página Principal</a></li>
+                    <li><a href="./gallery/gallery.html">Galeria</a></li>
+                    <li><a href="./about/about.html">Sobre</a></li>
+            </ul>
+        </menu>
+        <h1 id="logo">g3</h1>
+    </div>
 </header>
-
-
+<!--Notícias-->
   <main>
     <div class="mainpage">
       <div id="mainnews">
@@ -68,9 +66,9 @@
         </div>
       </div>
     </main>
-  <footer>
+<!--rodapé-->
+  <div id="footer">
     <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
-  </footer>
   </div>
-</body>
+  </body>
 </html>
