creating js news

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
     <div class="mainpage">
       <div id="mainnews">
-        <script src="media_news copy.json"></script> 
+        <script src="today-news.js"></script> 
       </div>
     </div>
       <div id="news">
