--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <main>
     <div class="mainpage">
       <div id="mainnews">
-        <script src="today-news.js"></script> 
+        <script src="today_news.js"></script> 
       </div>
+
     </div>
       <div id="news">
         <div class="floatnews">
