--- a/about/about.html
+++ b/about/about.html
@@ -24,7 +24,19 @@
             </menu>
             <h1 id="logo">g3</h1>
     </header>
-    
+    <main>
+        <div id="content">    
+            <div id="G3">
+                <h1>Sobre o G3</h1>
+                    <article>                </article>
+            </div>
+            <div id="3G">
+                <h1>Sobre o G3</h1>
+                <article>
+                    <h2> 3G </h2>
+                <article></article>
+        </div>
+    </main>
     <div id="footer">
         <p> DISCLAIMER: <i>This page has artistic purporse only. Made by 3G Collective.</i></p>
     </div>
