--- a/about/about.html
+++ b/about/about.html
@@ -28,9 +28,11 @@
         <div id="content">    
             <div id="G3">
                 <h1>Sobre o G3</h1>
-                    <article>                </article>
+                    <article>
+                        <h2> É o G3</h2>
+                    </article>
             </div>
-            <div id="3G">
+            <div id="GGG">
                 <h1>Sobre o G3</h1>
                 <article>
                     <h2> 3G </h2>
