--- a/about/about.html
+++ b/about/about.html
@@ -66,7 +66,7 @@
                             <p>Na dança da tecnologia e da mente humana,</p>
                             <p>O site de notícias geradas por imagens pela IA tece um laço,</p>
                             <p>Um lembrete de que a percepção é uma arte renovada,</p>
-                            <p>Aos olhos do observador, o conto ressoa verdadeiro.</p></br></br>
+                            <p>Aos olhos do observador, o conto ressoa verdadeiro.</p><br/><br/>
                             <p>Este Texto foi Gerado por Inteligência Artificial, como boa parte desse site.</p>
                             <p>Mas e as notícias? Os Fatos da vida são artificiais?</p>
                             <p>Como foi seu dia? Nos diga e redija!</p>
@@ -77,8 +77,9 @@
                 <h1>Sobre o G3</h1>
                 <article>
                     <h2> <i>3G stands for G and G and G </i>  </h2>
-                    <p>A proposta do Coletivo 3G não é apenas estética, mas também filosófica. Suas criações exploram os recantos mais profundos da experiência humana na era digital. Questões sobre identidade, privacidade, conexão e desconexão são tecidas habilmente em cada pixel. Através da combinação de elementos visuais, algoritmos e interatividade, o coletivo promove uma reflexão sobre como nós, seres humanos, nos relacionamos com a tecnologia e como ela molda nosso entendimento do mundo.</p>
-                    <p>O coletivo não se contenta em apenas gerar arte visualmente cativante, mas busca também a interseção entre o ser humano e o ciberespaço. Suas obras não são meros objetos de contemplação passiva, mas convites à participação e à co-criação. A audiência é convidada a explorar, manipular e, em última instância, ser parte integrante do processo artístico. Essa abordagem transforma o espectador em colaborador, fundindo o virtual e o real em uma experiência única.</p>
+                    <p>"A proposta do Coletivo 3G não é apenas estética, mas também filosófica. Suas criações exploram os recantos mais profundos da experiência humana na era digital. Questões sobre identidade, privacidade, conexão e desconexão são tecidas habilmente em cada pixel. Através da combinação de elementos visuais, algoritmos e interatividade, o coletivo promove uma reflexão sobre como nós, seres humanos, nos relacionamos com a tecnologia e como ela molda nosso entendimento do mundo.</p>
+                    <p>O coletivo não se contenta em apenas gerar arte visualmente cativante, mas busca também a interseção entre o ser humano e o ciberespaço. Suas obras não são meros objetos de contemplação passiva, mas convites à participação e à co-criação. A audiência é convidada a explorar, manipular e, em última instância, ser parte integrante do processo artístico. Essa abordagem transforma o espectador em colaborador, fundindo o virtual e o real em uma experiência única."</p>
+                    <br/> <br/> <br/> <p id="quote"><i>- ChatGTP sobre 3G Collective</i></p>
                 </article>
         </div>
     </main>
